Switching string categories to string array resource added transition to fridge view but not operational

--- a/app/src/main/res/layout/activity_fooddetails.xml
+++ b/app/src/main/res/layout/activity_fooddetails.xml
@@ -13,7 +13,8 @@
         android:layout_marginStart="2dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="20dp"
-        android:text="Carbohydrates:"
+        android:text="@string/carbohydrates"
+        android:fontFamily="@font/amaranth"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/fat_TextView"
         app:layout_constraintEnd_toEndOf="@+id/itemGrams"
@@ -28,6 +29,7 @@
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="18dp"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/potassium_TextView"
         app:layout_constraintEnd_toEndOf="@+id/potassium_TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +42,9 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="17dp"
-        android:text="Fat:"
+        android:text="@string/fat"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/sodium_TextView"
         app:layout_constraintEnd_toEndOf="@+id/potassium_TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +59,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/gramsEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +74,7 @@
         android:layout_marginBottom="19dp"
         android:text="Calories:"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/protein_TextView"
         app:layout_constraintEnd_toEndOf="@+id/protein_TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +86,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="23dp"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/editButton"
         app:layout_constraintEnd_toStartOf="@+id/editButton"
         app:layout_constraintStart_toStartOf="@+id/editButton"
@@ -92,8 +98,9 @@
         android:layout_height="43dp"
         android:layout_marginStart="14dp"
         android:layout_marginEnd="4dp"
-        android:text="Serving size in grams:"
+        android:text="@string/serving_size_in_grams"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBaseline_toBaselineOf="@+id/gramsEdit"
         app:layout_constraintEnd_toStartOf="@+id/gramsEdit"
         app:layout_constraintStart_toStartOf="parent" />
@@ -105,8 +112,9 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="19dp"
-        android:text="Meal:"
+        android:text="@string/meal"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/calories_TextView"
         app:layout_constraintEnd_toEndOf="@+id/calories_TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +125,8 @@
         android:layout_width="175dp"
         android:layout_height="49dp"
         android:layout_marginBottom="33dp"
-        android:text="Submit"
+        android:text="@string/submit"
+        android:background="@drawable/btn_shape3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,8 +139,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="17dp"
-        android:text="Protein"
+        android:text="@string/protein"
         android:textSize="18sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/carbs_TextView"
         app:layout_constraintEnd_toEndOf="@+id/carbs_TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,8 +154,9 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
-        android:hint="Enter amount"
+        android:hint="@string/enter_amount"
         android:inputType="number"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/meal_TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemGrams"
@@ -156,7 +167,8 @@
         android:layout_width="170dp"
         android:layout_height="51dp"
         android:layout_marginBottom="28dp"
-        android:text="Edit"
+        android:text="@string/edit"
+        android:background="@drawable/btn_shape3"
         app:layout_constraintBottom_toTopOf="@+id/deleteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +179,8 @@
         android:layout_width="171dp"
         android:layout_height="53dp"
         android:layout_marginBottom="16dp"
-        android:text="Delete"
+        android:text="@string/delete"
+        android:background="@drawable/btn_shape3"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
