--- a/app/src/main/res/layout/activity_foodtracking.xml
+++ b/app/src/main/res/layout/activity_foodtracking.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pie_apple"
     tools:context=".foodTracking">
 
 
@@ -14,8 +15,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="Date"
-        android:textSize="24sp"
+        android:text="@string/date"
+        android:fontFamily="@font/amaranth_bold"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/totalCaloriesText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,8 +66,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_below="@id/breakfastListView"
+        android:fontFamily="@font/amaranth"
         android:layout_marginBottom="17dp"
-        android:text="Add Breakfast"
+        android:text="@string/add_breakfast"
         app:layout_constraintBottom_toTopOf="@+id/lunchText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +81,8 @@
         android:layout_height="0dp"
         android:layout_below="@id/lunchListView"
         android:layout_marginBottom="10dp"
-        android:text="Add Lunch"
+        android:fontFamily="@font/amaranth"
+        android:text="@string/add_lunch"
         app:layout_constraintBottom_toTopOf="@+id/dinnerText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +95,8 @@
         android:layout_height="0dp"
         android:layout_below="@id/dinnerListView"
         android:layout_marginBottom="51dp"
-        android:text="Add Dinner"
+        android:text="@string/add_dinner"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -105,8 +110,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="223dp"
         android:layout_marginBottom="7dp"
-        android:text="Dinner"
+        android:text="@string/dinner"
         android:textSize="20sp"
+        android:fontFamily="@font/amaranth_bold"
         app:layout_constraintBottom_toTopOf="@+id/dinnerListView"
         app:layout_constraintEnd_toStartOf="@+id/dinnerCaloriesText"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,8 +125,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="231dp"
         android:layout_marginBottom="9dp"
-        android:text="Lunch"
+        android:text="@string/lunch"
         android:textSize="20sp"
+        android:fontFamily="@font/amaranth_bold"
         app:layout_constraintBottom_toTopOf="@+id/lunchListView"
         app:layout_constraintEnd_toStartOf="@+id/lunchCaloriesText"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,8 +141,9 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="192dp"
         android:layout_marginBottom="16dp"
-        android:text="Breakfast"
+        android:text="@string/breakfast"
         android:textSize="20sp"
+        android:fontFamily="@font/amaranth_bold"
         app:layout_constraintBottom_toTopOf="@+id/breakfastListView"
         app:layout_constraintEnd_toStartOf="@+id/breakfastCaloriesText"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,8 +155,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textSize="20sp"
+        android:fontFamily="@font/amaranth"
         app:layout_constraintBottom_toTopOf="@+id/breakfastListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/breakfastText"
@@ -161,6 +170,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="48dp"
         android:text="TextView"
+        android:fontFamily="@font/amaranth"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/lunchListView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,6 +183,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="48dp"
         android:text="TextView"
+        android:fontFamily="@font/amaranth"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/dinnerListView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,6 +194,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:fontFamily="@font/amaranth"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/breakfastCaloriesText"
         app:layout_constraintEnd_toEndOf="parent"
