--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@drawable/herbal_spritz"
+    android:background="@drawable/herbal_spritz_trans"
     tools:context=".DashboardActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -31,29 +30,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:orientation="horizontal"
-            android:layout_marginTop="70sp">
-            <Button
-                android:id="@+id/btnLogout"
-                android:layout_width="90sp"
-                android:layout_height="40sp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="310sp"
-                android:layout_marginEnd="20sp"
-                android:hint="@string/log_out"
-                android:text="@string/log_out"
-                app:backgroundTint="@null"
-                android:background="@drawable/btn_shape5"
-                android:fontFamily="@font/amaranth"
-                android:textSize="11sp"
-                tools:ignore="TouchTargetSizeCheck">
 
-            </Button>
-
-        </LinearLayout>
 
 
         <TextView
@@ -63,6 +40,7 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/amaranth"
             android:text="@string/dashboard"
+            android:layout_marginTop="110sp"
             android:textAlignment="center"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -80,18 +58,21 @@
                 android:id="@+id/btnGotoViewProfile"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/greyBlueCool"
-                android:backgroundTintMode="src_over"
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/btn_shape3"
                 android:fontFamily="@font/amaranth"
-                android:text="@string/view_profile" />
+                android:text="@string/view_profile"
+                android:textSize="20sp"/>
 
             <Button
                 android:id="@+id/btnGotoWaterIntake"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:fontFamily="@font/amaranth"
-                android:foregroundTintMode="src_over"
-                android:text="@string/water_intake" />
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/btn_shape3"
+                android:text="@string/water_intake"
+                android:textSize="20sp"/>
 
 
             <Button
@@ -99,16 +80,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:fontFamily="@font/amaranth"
-                android:foregroundTintMode="src_over"
-                android:text="@string/fridge" />
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/btn_shape3"
+                android:text="@string/fridge"
+                android:textSize="20sp"/>
 
             <Button
                 android:id="@+id/btnGoToFoodIntake"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:fontFamily="@font/amaranth"
-                android:foregroundTintMode="src_over"
-                android:text="@string/food_intake" />
+                android:background="@drawable/btn_shape3"
+                android:text="@string/food_intake"
+                android:textSize="20sp"/>
         </LinearLayout>
 
 
