--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -21,7 +21,7 @@
             android:text="@string/Fridge"
             android:textSize="40sp"
             android:layout_marginTop="20sp"
-
+            android:gravity="center"
             android:fontFamily="@font/amaranth"
             android:textColor="@color/shadeDarkDeepGreyBlue"
             />
@@ -30,6 +30,7 @@
             android:id="@+id/editTextItem"
             android:layout_width="300sp"
             android:layout_height="50dp"
+            android:layout_marginTop="10sp"
             tools:ignore="TouchTargetSizeCheck"
             android:layout_gravity="center_horizontal"
             android:hint="@string/enter_item_to_search"/>
@@ -63,19 +64,11 @@
 
         </LinearLayout>
 
-
-        <Button
-            android:id="@+id/btnCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/camera"
-           />
-
-
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             />
     </LinearLayout>
 
